# Race

./: CMakeLists.txt  Car.cpp  Car.h  Let.cpp  Let.h  Race.sln  main.cpp
Race/: Car.h  Map.h  Race.vcxproj  Race.vcxproj.filters  main.cpp
Race/x64/Debug/: Race.exe.recipe  vc143.idb
Race/x64/Debug/Race.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Race.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Test/: CMakeLists.txt  test.py
Test/Helpers/: CMakeLists.txt
